gcc/testsuite/rust/rustc/ui/error-codes/E0392.rs
enum Foo<T> { Bar } // { dg-error ".E0392." "" { target *-*-* } }

fn main() {
}

